hphp/hack/test/package_v2/package_access/cross_package_with_package_syntax_if_nested.php.exp.v2
error: Typing[4472] Cannot access an element which belongs to package pkg4 from package pkg3 [1]
-> This is from cross_package_with_package_syntax_if_nested.php--pkg4.php [2]
-> cross_package_with_package_syntax_if_nested.php--pkg4.php belongs to package pkg4 [3]
-> But cross_package_with_package_syntax_if_nested.php--pkg3.php is in package pkg3 [4]
-> And package pkg3 does not include package pkg4 [5]

cross_package_with_package_syntax_if_nested.php--pkg3.php:12:5
     1 | <?hh
[4]  2 | <<file: __PackageOverride('pkg3')>>
     3 | function test(): void {
     4 |   if (package pkg1) {
       :
    10 |     // only pkg1 is accessible here
    11 |     pkg1_call(); // ok
[1] 12 |     pkg4_call(); // error
    13 |   }
    14 | }

cross_package_with_package_syntax_if_nested.php--pkg4.php:3:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg4')>>
[2]  3 | function pkg4_call(): void {}

PACKAGES.toml:13:11
    11 | includes = ["pkg1"]
    12 | 
[5] 13 | [packages.pkg3]
    14 | includes = ["pkg2", "pkg1"]
    15 | 

1 error found
